--- a/docs/src/layouts/docs.astro
+++ b/docs/src/layouts/docs.astro
@@ -17,7 +17,12 @@ const {content = {}} = Astro.props;
 
       .docs {
         display: flex;
-        padding-right: token('space.layout.2xl');
+        flex-direction: column;
+
+        @media (min-width: 600px) {
+          flex-direction: row;
+          padding-right: token('space.layout.2xl');
+        }
       }
     </style>
   </head>
