--- a/docs/src/styles/_utils.scss
+++ b/docs/src/styles/_utils.scss
@@ -2,9 +2,14 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 100%;
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
   width: 65rem;
+
+  @media (min-width: 600px) {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
 }
 
 .tac { text-align: center; }
