--- a/packages/plugin-css/test/color/want.css
+++ b/packages/plugin-css/test/color/want.css
@@ -5,77 +5,77 @@
  */
 
 :root {
-  --color-blue: #218bff;
-  --color-action: var(--color-blue);
-  --gradient: #218bff 0%, #e85aad 100%;
+  --ds-color-blue: #218bff;
+  --ds-color-action: var(--ds-color-blue);
+  --ds-gradient: #218bff 0%, #e85aad 100%;
 }
 
 [data-color-theme="light"] {
-  --color-blue: #218bff;
-  --color-action: var(--color-blue);
+  --ds-color-blue: #218bff;
+  --ds-color-action: var(--ds-color-blue);
 }
 
 [data-color-theme="dark"] {
-  --color-blue: #388bfd;
-  --color-action: var(--color-blue);
+  --ds-color-blue: #388bfd;
+  --ds-color-action: var(--ds-color-blue);
 }
 
 [data-color-theme="light-colorblind"] {
-  --color-blue: #218bff;
-  --color-action: var(--color-blue);
+  --ds-color-blue: #218bff;
+  --ds-color-action: var(--ds-color-blue);
 }
 
 [data-color-theme="light-high-contrast"] {
-  --color-blue: #1168e3;
-  --color-action: var(--color-blue);
+  --ds-color-blue: #1168e3;
+  --ds-color-action: var(--ds-color-blue);
 }
 
 [data-color-theme="dark-dimmed"] {
-  --color-blue: #4184e4;
-  --color-action: var(--color-blue);
+  --ds-color-blue: #4184e4;
+  --ds-color-action: var(--ds-color-blue);
 }
 
 [data-color-theme="high-contrast"] {
-  --color-blue: #409eff;
-  --color-action: var(--color-blue);
+  --ds-color-blue: #409eff;
+  --ds-color-action: var(--ds-color-blue);
 }
 
 [data-color-theme="dark-colorblind"] {
-  --color-blue: #388bfd;
-  --color-action: var(--color-blue);
+  --ds-color-blue: #388bfd;
+  --ds-color-action: var(--ds-color-blue);
 }
 
 @supports (color: color(display-p3 1 1 1)) {
   :root {
-    --color-blue: color(display-p3 0.129412 0.545098 1);
-    --gradient: color(display-p3 0.129412 0.545098 1) 0%, color(display-p3 0.909804 0.352941 0.678431) 100%;
+    --ds-color-blue: color(display-p3 0.129412 0.545098 1);
+    --ds-gradient: color(display-p3 0.129412 0.545098 1) 0%, color(display-p3 0.909804 0.352941 0.678431) 100%;
   }
 
   [data-color-theme="light"] {
-    --color-blue: color(display-p3 0.129412 0.545098 1);
+    --ds-color-blue: color(display-p3 0.129412 0.545098 1);
   }
 
   [data-color-theme="dark"] {
-    --color-blue: color(display-p3 0.219608 0.545098 0.992157);
+    --ds-color-blue: color(display-p3 0.219608 0.545098 0.992157);
   }
 
   [data-color-theme="light-colorblind"] {
-    --color-blue: color(display-p3 0.129412 0.545098 1);
+    --ds-color-blue: color(display-p3 0.129412 0.545098 1);
   }
 
   [data-color-theme="light-high-contrast"] {
-    --color-blue: color(display-p3 0.066667 0.407843 0.890196);
+    --ds-color-blue: color(display-p3 0.066667 0.407843 0.890196);
   }
 
   [data-color-theme="dark-dimmed"] {
-    --color-blue: color(display-p3 0.254902 0.517647 0.894118);
+    --ds-color-blue: color(display-p3 0.254902 0.517647 0.894118);
   }
 
   [data-color-theme="high-contrast"] {
-    --color-blue: color(display-p3 0.25098 0.619608 1);
+    --ds-color-blue: color(display-p3 0.25098 0.619608 1);
   }
 
   [data-color-theme="dark-colorblind"] {
-    --color-blue: color(display-p3 0.219608 0.545098 0.992157);
+    --ds-color-blue: color(display-p3 0.219608 0.545098 0.992157);
   }
 }
