feat: support the latest version of the spec
This adds support for
- Font name
- Font weight
- Number

--- a/docs/src/components/Token.astro
+++ b/docs/src/components/Token.astro
@@ -14,7 +14,7 @@ const {type: tokenType} = Astro.props;
     ]
   }
   {
-    tokenType === 'font' && [
+    ['fontFamily', 'fontWeight'].includes(tokenType) && [
       <svg class="token-bg">
         <use xlink:href="#hex" />
       </svg>,
