--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -9,7 +9,7 @@ import Token from '../components/Token.astro';
 import packageJSON from '../../../packages/cli/package.json';
 
 const version = packageJSON.version;
-const tokenTypes = ['color', 'color', 'font', 'font', 'dimension', 'duration', 'link', 'cubic-bezier', 'shadow', 'border', 'stroke-style', 'transition', 'empty', 'empty', 'empty', 'empty', 'empty'];
+const tokenTypes = ['color', 'color', 'fontFamily', 'fontFamily', 'fontWeight', 'fontWeight', 'dimension', 'duration', 'link', 'cubic-bezier', 'shadow', 'border', 'stroke-style', 'transition', 'empty', 'empty', 'empty', 'empty', 'empty'];
 ---
 
 <!DOCTYPE html>
