Add Tokens Studio support, deprecate Figma sync

--- a/docs/tokens/index.scss
+++ b/docs/tokens/index.scss
@@ -83,7 +83,7 @@ $__token-values: (
   "ui.bg": (
     default: (#ffffff),
     "light": (#ffffff),
-    "dark": (#00193f),
+    "dark": (#001824),
   ),
   "ui.fg": (
     default: (#00193f),
@@ -93,7 +93,7 @@ $__token-values: (
   "ui.action": (
     default: (#2b3faa),
     "light": (#2b3faa),
-    "dark": (#4887c9),
+    "dark": (#5ca9d7),
   ),
   "font.family.ppNeue": (
     default: ("PP Neue Montreal", system-ui, ui-sans-serif, -apple-system, "Helvetica Neue", Helvetica, Arial, sans-serif),
