--- a/docs/src/components/Footer.astro
+++ b/docs/src/components/Footer.astro
@@ -3,45 +3,45 @@ import CobaltSm from './CobaltSm.astro';
 ---
 
 <style lang="scss">
-  @use "../../tokens" as *;
+  @use '../../tokens' as *;
 
- .footer {
-   border-top: 1px solid currentColor;
-   display: grid;
-   grid-template-columns: auto auto;
-   grid-gap: 2rem;
-   margin-top: 2rem;
-   padding-bottom: 6rem;
-   padding-top: 1.5rem;
- }
+  .footer {
+    border-top: 1px solid currentColor;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 2rem;
+    margin-top: 2rem;
+    padding-bottom: 6rem;
+    padding-top: 1.5rem;
+  }
 
- .ensignia {
-   align-items: center;
-   align-self: flex-start;
-   display: grid;
-   font-size: token('font.size.05');
-   font-weight: 500;
-   grid-gap: token('space.sm');
-   grid-template-columns: min-content min-content;
- }
+  .ensignia {
+    align-items: center;
+    align-self: flex-start;
+    display: grid;
+    font-size: token('font.size.05');
+    font-weight: 500;
+    grid-gap: token('space.sm');
+    grid-template-columns: min-content min-content;
+  }
 
- .license {
-   font-size: token('font.size.04');
-   margin-top: token('space.sm');
- }
+  .license {
+    font-size: token('font.size.04');
+    margin-top: token('space.sm');
+  }
 
- nav {
-   display: flex;
-   flex-direction: column;
-   margin-left: auto;
-   width: 8rem;
+  nav {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    width: 8rem;
 
-   a {
-     display: block;
-     margin: 0.25em 0;
-     text-decoration: none;
-   }
- }
+    a {
+      display: block;
+      margin: 0.25em 0;
+      text-decoration: none;
+    }
+  }
 </style>
 
 <div class="wrapper">
