--- a/docs/src/pages/docs/tokens/index.astro
+++ b/docs/src/pages/docs/tokens/index.astro
@@ -82,7 +82,7 @@ const tokenDef = {
 
   <h2 id="font">
     <Token type="fontFamily" />
-    Font
+    Font Family
   </h2>
 
   <p>A font name as defined in <a href={tokenDef.fontFamily} target="_blank"><b>8.3</b></a>.</p>
@@ -123,7 +123,7 @@ const tokenDef = {
 
   <h2 id="font-weight">
     <Token type="fontWeight" />
-    Font
+    Font Weight
   </h2>
 
   <p>A font weight as defined in <a href={tokenDef.fontWeight} target="_blank"><b>8.4</b></a>.</p>
@@ -297,7 +297,7 @@ const tokenDef = {
 
   <h2 id="number">
     <Token type="number" />
-    Duration
+    Number
   </h2>
 
   <p>A number as defined in <a href={tokenDef.number} target="_blank"><b>8.7</b></a>.</p>
